--- a/index.html
+++ b/index.html
@@ -72,45 +72,33 @@
         </div>
     </div>
 
-    <aside class="sidebar sidebar-default navs-rounded-all sidebar-mini">
-        <div class="sidebar-header d-flex align-items-center justify-content-start">
-            <a href="./index.html" class="navbar-brand">
-                <!--Logo start-->
-                <svg width="30" class="" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="-0.757324" y="19.2427" width="28" height="4" rx="2"
-                        transform="rotate(-45 -0.757324 19.2427)" fill="currentColor" />
-                    <rect x="7.72803" y="27.728" width="28" height="4" rx="2" transform="rotate(-45 7.72803 27.728)"
-                        fill="currentColor" />
-                    <rect x="10.5366" y="16.3945" width="16" height="4" rx="2" transform="rotate(45 10.5366 16.3945)"
-                        fill="currentColor" />
-                    <rect x="10.5562" y="-0.556152" width="28" height="4" rx="2"
-                        transform="rotate(45 10.5562 -0.556152)" fill="currentColor" />
-                </svg>
-                <!--logo End-->
-                <h4 class="logo-title">Hope UI</h4>
-            </a>
-            <div class="sidebar-toggle" data-toggle="sidebar" data-active="true">
-                <i class="icon">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M4.25 12.2744L19.25 12.2744" stroke="currentColor" stroke-width="1.5"
-                            stroke-linecap="round" stroke-linejoin="round"></path>
-                        <path d="M10.2998 18.2988L4.2498 12.2748L10.2998 6.24976" stroke="currentColor"
-                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg>
-                </i>
-            </div>
-        </div>
-        <div class="sidebar-body pt-0 data-scrollbar">
-            <div class="sidebar-list">
-                <!-- Sidebar Menu Start -->
-                <ul class="navbar-nav iq-main-menu" id="sidebar-menu">
-                    <li class="nav-item static-item">
-                        <a class="nav-link static-item disabled" href="#" tabindex="-1">
-                            <span class="default-icon">Home</span>
-                            <span class="mini-icon">-</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
+    <main class="main-content">
+        <div class="position-relative iq-banner">
+            <!--Nav Start-->
+            <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                <div class="container-fluid">
+                    <a href="./index.html" class="navbar-brand">
+                        <!--Logo start-->
+                        <svg width="30" class="text-primary" viewBox="0 0 30 30" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <rect x="-0.757324" y="19.2427" width="28" height="4" rx="2"
+                                transform="rotate(-45 -0.757324 19.2427)" fill="currentColor" />
+                            <rect x="7.72803" y="27.728" width="28" height="4" rx="2"
+                                transform="rotate(-45 7.72803 27.728)" fill="currentColor" />
+                            <rect x="10.5366" y="16.3945" width="16" height="4" rx="2"
+                                transform="rotate(45 10.5366 16.3945)" fill="currentColor" />
+                            <rect x="10.5562" y="-0.556152" width="28" height="4" rx="2"
+                                transform="rotate(45 10.5562 -0.556152)" fill="currentColor" />
+                        </svg>
+                        <!--logo End-->
+                        <h4 class="logo-title">Hope UI</h4>
+                    </a>                  
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
                         <a class="nav-link " aria-current="page" href="./index.html">
                             <i class="icon">
                                 <svg width="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -137,15 +125,6 @@
                             <span class="item-name">Document</span>
                         </a>
                     </li>
-                    <li>
-                        <hr class="hr-horizontal">
-                    </li>
-                    <li class="nav-item static-item">
-                        <a class="nav-link static-item disabled" href="#" tabindex="-1">
-                            <span class="default-icon">Masters</span>
-                            <span class="mini-icon">-</span>
-                        </a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./masters_customer.html">
                             <i class="icon">
@@ -170,132 +149,59 @@
                             <span class="item-name">Document</span>
                         </a>
                     </li>
-                    <li>
-                        <hr class="hr-horizontal">
-                    </li>
-                </ul>
-                <!-- Sidebar Menu End -->
-            </div>
-        </div>
-        <div class="sidebar-footer"></div>
-    </aside>
-    <main class="main-content">
-        <div class="position-relative iq-banner">
-            <!--Nav Start-->
-            <nav class="nav navbar navbar-expand-lg navbar-light iq-navbar">
-                <div class="container-fluid navbar-inner">
-                    <a href="./index.html" class="navbar-brand">
-                        <!--Logo start-->
-                        <svg width="30" class="text-primary" viewBox="0 0 30 30" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <rect x="-0.757324" y="19.2427" width="28" height="4" rx="2"
-                                transform="rotate(-45 -0.757324 19.2427)" fill="currentColor" />
-                            <rect x="7.72803" y="27.728" width="28" height="4" rx="2"
-                                transform="rotate(-45 7.72803 27.728)" fill="currentColor" />
-                            <rect x="10.5366" y="16.3945" width="16" height="4" rx="2"
-                                transform="rotate(45 10.5366 16.3945)" fill="currentColor" />
-                            <rect x="10.5562" y="-0.556152" width="28" height="4" rx="2"
-                                transform="rotate(45 10.5562 -0.556152)" fill="currentColor" />
-                        </svg>
-                        <!--logo End-->
-                        <h4 class="logo-title">Hope UI</h4>
-                    </a>
-                    <div class="sidebar-toggle" data-toggle="sidebar" data-active="true">
-                        <i class="icon">
-                            <svg width="20px" height="20px" viewBox="0 0 24 24">
-                                <path fill="currentColor"
-                                    d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z" />
-                            </svg>
-                        </i>
-                    </div>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon">
-                            <span class="mt-2 navbar-toggler-bar bar1"></span>
-                            <span class="navbar-toggler-bar bar2"></span>
-                            <span class="navbar-toggler-bar bar3"></span>
-                        </span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="mb-2 navbar-nav ms-auto align-items-center navbar-list mb-lg-0">
-                            <li class="nav-item dropdown">
-                                <a href="#" class="search-toggle nav-link" id="dropdownMenuButton2"
-                                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <img src="./assets/images/Flag/flag001.png" class="img-fluid rounded-circle"
-                                        alt="user" style="height: 30px; min-width: 30px; width: 30px;">
-                                    <span class="bg-primary"></span>
-                                </a>
-                                <div class="p-0 sub-drop dropdown-menu dropdown-menu-end"
-                                    aria-labelledby="dropdownMenuButton2">
-                                    <div class="m-0 border-0 shadow-none card">
-                                        <div class="p-0 ">
-                                            <ul class="p-0 list-group list-group-flush">
-                                                <li class="iq-sub-card list-group-item"><a class="p-0" href="#"><img
-                                                            src="./assets/images/Flag/flag-03.png" alt="img-flaf"
-                                                            class="img-fluid me-2"
-                                                            style="width: 15px;height: 15px;min-width: 15px;" />Spanish</a>
-                                                </li>
-                                                <li class="iq-sub-card list-group-item"><a class="p-0" href="#"><img
-                                                            src="./assets/images/Flag/flag-04.png" alt="img-flaf"
-                                                            class="img-fluid me-2"
-                                                            style="width: 15px;height: 15px;min-width: 15px;" />Italian</a>
-                                                </li>
-                                                <li class="iq-sub-card list-group-item"><a class="p-0" href="#"><img
-                                                            src="./assets/images/Flag/flag-02.png" alt="img-flaf"
-                                                            class="img-fluid me-2"
-                                                            style="width: 15px;height: 15px;min-width: 15px;" />French</a>
-                                                </li>
-                                                <li class="iq-sub-card list-group-item"><a class="p-0" href="#"><img
-                                                            src="./assets/images/Flag/flag-05.png" alt="img-flaf"
-                                                            class="img-fluid me-2"
-                                                            style="width: 15px;height: 15px;min-width: 15px;" />German</a>
-                                                </li>
-                                                <li class="iq-sub-card list-group-item"><a class="p-0" href="#"><img
-                                                            src="./assets/images/Flag/flag-06.png" alt="img-flaf"
-                                                            class="img-fluid me-2"
-                                                            style="width: 15px;height: 15px;min-width: 15px;" />Japanese</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="./assets/images/Flag/flag001.png" class="img-fluid rounded-circle"
+                            alt="user" style="height: 30px; min-width: 30px; width: 30px;">
+                        <span class="bg-primary"></span>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item" href="#"><img
+                            src="./assets/images/Flag/flag-03.png" alt="img-flaf"
+                            class="img-fluid me-2"
+                            style="width: 15px;height: 15px;min-width: 15px;" />English</a></li>
+                          <li><a class="dropdown-item" href="#"><img
+                            src="./assets/images/Flag/flag-03.png" alt="img-flaf"
+                            class="img-fluid me-2"
+                            style="width: 15px;height: 15px;min-width: 15px;" />Tamil</a></li>
+                        </ul>
+                      </li>
+                    <li class="nav-item dropdown">
+                        <a class="py-0 nav-link d-flex align-items-center" href="#" id="navbarDropdown"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="./assets/images/avatars/01.png" alt="User-Profile"
+                                class="theme-color-default-img img-fluid avatar avatar-50 avatar-rounded">
+                            <img src="./assets/images/avatars/avtar_1.png" alt="User-Profile"
+                                class="theme-color-purple-img img-fluid avatar avatar-50 avatar-rounded">
+                            <img src="./assets/images/avatars/avtar_2.png" alt="User-Profile"
+                                class="theme-color-blue-img img-fluid avatar avatar-50 avatar-rounded">
+                            <img src="./assets/images/avatars/avtar_4.png" alt="User-Profile"
+                                class="theme-color-green-img img-fluid avatar avatar-50 avatar-rounded">
+                            <img src="./assets/images/avatars/avtar_5.png" alt="User-Profile"
+                                class="theme-color-yellow-img img-fluid avatar avatar-50 avatar-rounded">
+                            <img src="./assets/images/avatars/avtar_3.png" alt="User-Profile"
+                                class="theme-color-pink-img img-fluid avatar avatar-50 avatar-rounded">
+                            <div class="caption ms-3 d-none d-md-block ">
+                                <h6 id="username" class="mb-0 caption-title">Austin Robertson</h6>
+                                <p id="useremail" class="mb-0 caption-sub-title">Marketing Administrator</p>
+                            </div>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                                    href="#">Change Password</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="py-0 nav-link d-flex align-items-center" href="#" id="navbarDropdown"
-                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img src="./assets/images/avatars/01.png" alt="User-Profile"
-                                        class="theme-color-default-img img-fluid avatar avatar-50 avatar-rounded">
-                                    <img src="./assets/images/avatars/avtar_1.png" alt="User-Profile"
-                                        class="theme-color-purple-img img-fluid avatar avatar-50 avatar-rounded">
-                                    <img src="./assets/images/avatars/avtar_2.png" alt="User-Profile"
-                                        class="theme-color-blue-img img-fluid avatar avatar-50 avatar-rounded">
-                                    <img src="./assets/images/avatars/avtar_4.png" alt="User-Profile"
-                                        class="theme-color-green-img img-fluid avatar avatar-50 avatar-rounded">
-                                    <img src="./assets/images/avatars/avtar_5.png" alt="User-Profile"
-                                        class="theme-color-yellow-img img-fluid avatar avatar-50 avatar-rounded">
-                                    <img src="./assets/images/avatars/avtar_3.png" alt="User-Profile"
-                                        class="theme-color-pink-img img-fluid avatar avatar-50 avatar-rounded">
-                                    <div class="caption ms-3 d-none d-md-block ">
-                                        <h6 id="username" class="mb-0 caption-title">Austin Robertson</h6>
-                                        <p id="useremail" class="mb-0 caption-sub-title">Marketing Administrator</p>
-                                    </div>
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" data-bs-toggle="modal"
-                                            data-bs-target="#exampleModal" href="#">Change Password</a>
-                                    </li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" id="logout_user" href="#">Logout</a>
-                                    </li>
-                                </ul>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" id="logout_user" href="#">Logout</a>
                             </li>
                         </ul>
-                    </div>
+                    </li>
+                    </ul>
+                  </div>
                 </div>
-            </nav> <!-- Nav Header Component Start -->
+              </nav>
+               <!-- Nav Header Component Start -->
             <div class="iq-navbar-header" style="height: 215px;">
                 <div class="container-fluid iq-container">
                     <div class="row">
