--- a/document.html
+++ b/document.html
@@ -712,7 +712,19 @@
                                                     value="Next">Next</button>
                                             </div>
                                             <div id="" class="col overflow-auto">
-                                                <div id="vendorInfoTable_company" class=" d-none"></div>
+                                                <table id="vendorInfoTable_company" class="table d-none">
+                                                    <thead>
+                                                        <tr>
+                                                            <th scope="col">#</th>
+                                                            <th scope="col">Name</th>
+                                                            <th scope="col">Company</th>
+                                                            <th scope="col">Role</th>
+                                                            <th scope="col">Action</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody id="">
+                                                    </tbody>
+                                                </table>
                                                 <table id="vendorInfoTable_individual" class="table d-none">
                                                     <thead>
                                                         <tr>
@@ -721,7 +733,7 @@
                                                             <th scope="col">Action</th>
                                                         </tr>
                                                     </thead>
-                                                    <tbody>
+                                                    <tbody id="">
                                                     </tbody>
                                                 </table>
                                             </div>
@@ -963,7 +975,19 @@
                                                     value="Next">Next</button>
                                             </div>
                                             <div id="" class="col overflow-auto">
-                                                <div id="purchaserInfoTable_company" class="d-none"></div>
+                                                <table id="purchaserInfoTable_company" class="table d-none">
+                                                    <thead>
+                                                        <tr>
+                                                            <th scope="col">#</th>
+                                                            <th scope="col">Name</th>
+                                                            <th scope="col">Company</th>
+                                                            <th scope="col">Role</th>
+                                                            <th scope="col">Action</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody id="">
+                                                    </tbody>
+                                                </table>
                                                 <table id="purchaserInfoTable_individual" class="table d-none">
                                                     <thead>
                                                         <tr>
